@@ -1,5 +1,7 @@
 2009-05-18  Satoshi Konno <skonno@cybergarage.org>
 	* Added cg_upnp_dms_condir_getsystemupdateid() and cg_upnp_dms_condir_setsystemupdateid().
+	* Added a XML namespaces and schemas of DLNA into the device desctiption and the DIDL node.
+	* Changed cg_upnp_media_content_settype() to set "object.container" when the specified type is contaier.
 
 2009-04-20  Satoshi Konno <skonno@cybergarage.org>
 	* Added CGUpnpAvItem:isMovieClass(), isVideoClass(), isAudioClass() and isImageClass().
